--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;"
+    "DefaultConnection": "Data Source=Andreas-Laptop;Initial Catalog=DISP_Delprojekt1;Integrated Security=True"
   }
 }
