--- a/API/API/Dockerfile
+++ b/API/API/Dockerfile
@@ -7,10 +7,10 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
 WORKDIR /src
-COPY ["API/API.csproj", "API/"]
+COPY ["API.csproj", "API/"]
 RUN dotnet restore "API/API.csproj"
 COPY . .
-WORKDIR "/src/API"
+WORKDIR "/src/API/"
 RUN dotnet build "API.csproj" -c Release -o /app/build
 
 FROM build AS publish
